--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,16 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+# /node_modules
+runner/node_modules
+# /frontend/node_modules
+# /runner/package-lock.json
+# /runner/node_modules/*
+*/node_modules
+**/node_modules
+*/.env
+*/package-lock.json
+**/package-lock.json
 /.pnp
 .pnp.*
 .yarn/*
@@ -16,7 +25,8 @@
 # next.js
 /.next/
 /out/
-
+/frontend/.next
+frontend/.next
 # production
 /build
 
@@ -31,7 +41,6 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # env files (can opt-in for committing if needed)
-.env*
 
 # vercel
 .vercel
