--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-slider": "^1.2.4",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.1.4",
+    "@tailwindcss/vite": "^4.1.8",
     "chart.js": "^4.4.9",
     "chartjs-plugin-doughnutlabel": "^2.0.3",
     "class-variance-authority": "^0.7.1",
@@ -39,6 +40,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.00",
     "react-loading-skeleton": "^3.5.0",
+    "react-medium-image-zoom": "^5.2.14",
     "react-select": "^5.10.1",
     "recharts": "^2.15.2",
     "sonner": "^2.0.3",
@@ -55,7 +57,7 @@
     "eslint": "^9.24.0",
     "eslint-config-next": "15.3.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3"
   },
   "browser": {
