--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.1.4",
     "@tailwindcss/vite": "^4.1.8",
+    "axios": "^1.10.0",
     "chart.js": "^4.4.9",
     "chartjs-plugin-doughnutlabel": "^2.0.3",
     "class-variance-authority": "^0.7.1",
