changes in UI and add reports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,6 @@
       ]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "runner/action.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "runner/action.js","src/types/global.d.ts"],
   "exclude": ["node_modules"]
 }
