--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "html2canvas": "^1.4.1",
-    "jspdf": "^3.0.2",
+    "html2pdf.js": "^0.12.1",
+    "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.539.0",
     "next": "^15.5.3",
