--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@faker-js/faker": "^9.9.0",
     "@headlessui/react": "^2.2.7",
+    "@lexical/code": "^0.37.0",
+    "@lexical/react": "^0.37.0",
+    "@lexical/rich-text": "^0.37.0",
+    "@lexical/selection": "^0.37.0",
+    "@lexical/utils": "^0.37.0",
     "@nivo/pie": "^0.99.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-checkbox": "^1.3.3",
@@ -41,10 +46,13 @@
     "html2pdf.js": "^0.12.1",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
+    "lexical": "^0.37.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.539.0",
     "next": "^15.5.3",
     "next-themes": "^0.4.6",
     "prism-react-renderer": "^2.4.1",
+    "prismjs": "^1.30.0",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
@@ -63,6 +71,7 @@
     "@eslint/eslintrc": "^3.3.1",
     "@tailwindcss/postcss": "^4.1.12",
     "@types/chart.js": "^4.0.1",
+    "@types/lodash": "^4.17.20",
     "@types/node": "^24.3.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
